--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vitepress": "^1.2.3"
     },
     "dependencies": {
+        "element-plus": "^2.7.6",
         "vue": "^3.4.29"
     }
 }
